[package]
name = "source_viewer"
version = "0.2.0"
edition = "2021"
description = "A CLI tool to inspect and analyze binary sources using DWARF debugging information."
license = "Apache-2.0"
repository = "https://github.com/nevakrien/SourceViewer"
readme = "README.md"
keywords = ["CLI", "debug", "DWARF", "binary", "analysis"]
categories = ["command-line-utilities"]

[[bin]]
name = "SourceViewer"
path = "src/main.rs"

[dependencies]
addr2line = "0.25.1"
capstone = "0.13.0"
clap = "4.5.21"
colored = "2.1.0"
crossterm = "0.29"
gimli = { version = "0.32.3", features = ["read"] }
object = "0.37.3"
tui = "0.19.0"
typed-arena = "2.0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
