[package]
name = "source_viewer"
version = "0.4.4"
edition = "2021"
description = "A CLI tool to inspect and analyze binary sources using DWARF debugging information."
license = "Apache-2.0"
repository = "https://github.com/nevakrien/SourceViewer"
readme = "README.md"
keywords = ["CLI", "debug", "DWARF", "binary", "analysis"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "src/**/*",
]
[[bin]]
name = "SourceViewer"
path = "src/main.rs"

[dependencies]
addr2line = "0.25.1"
capstone = "0.13.0"
clap = {version ="4.5.21", features = ["derive"]}
colored = "2.1.0"
crossterm = "0.29"
directories = "6.0.0"
fallible-iterator = "0.3.0"
gimli = { version = "0.32.3", features = ["read"] }
object = "0.37.3"
once_cell = "1.21.3"
serde = {version = "1.0.228", features =["derive"]}
toml = "0.9.10"
tui = "0.19.0"
typed-arena = "2.0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev]
panic = "abort"#gdb

[profile.release]
lto = "thin"#this might effect demangling for some weird reason
